# 8ms-esp32

./: .gitignore  .gitigore  .gitigore.swp  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  component.cmake  load.sh  load_windows.bat  partitions_8ms.csv  partitions_qmsd.csv  partitions_qmsd_ota.csv  project-name  release.md  release.sh  save.sh  sdkconfig  sdkconfig.default
components/esp-ali-smartliving/: CMakeLists.txt  Kconfig  build.sh  component.mk
components/esp-ali-smartliving/conn_mgr/: conn_mgr.c
components/esp-ali-smartliving/wrappers/: wrapper_awss.c  wrapper_crypto.c  wrapper_os.c  wrapper_ota.c  wrapper_product.c  wrapper_system.c  wrapper_tcp.c  wrapper_tls.c  wrapper_udp.c  wrapper_wifi.c
components/lvgl/: CMakeLists.txt  Kconfig  component.mk  lv_conf.h  lvgl_adapter.h
components/lvgl/include/: lvgl_gui.h
components/lvgl/lvgl/: .editorconfig  .gitignore  CHANGELOG.md  README.md  a.patch  library.json  library.properties  lv_conf_template.h  lvgl.h  lvgl.mk
components/lvgl/lvgl/.github/: FUNDING.yml  stale.yml
components/lvgl/lvgl/docs/: CODING_STYLE.md  CONTRIBUTING.md  ROADMAP.md
components/lvgl/lvgl/scripts/: code-format.cfg  lv_conf_checker.py  release.py
components/lvgl/lvgl/src/: lv_api_map.h  lv_conf_internal.h
components/lvgl/lvgl/tests/: Makefile  build.py
components/lvgl_esp32_drivers/: CMakeLists.txt  Kconfig  README.md  component.mk  lvgl_helpers.c  lvgl_helpers.h  lvgl_i2c_conf.h  lvgl_spi_conf.h  screen_driver.h
components/lvgl_esp32_drivers/lvgl_tft/: EVE.h  EVE_commands.h  EVE_config.h  FT81x.h  Kconfig  disp_driver.h  disp_spi.h  hx8357.h  il3820.h  ili9341.h  ili9481.h  ili9486.h  ili9488.h  ra8875.h  sh1107.h  ssd1306.h  st7735s.h  st7789.c  st7789.h  st7796s.c  st7796s.h
components/lvgl_esp32_drivers/lvgl_touch/: FT81x.h  Kconfig  adcraw.h  ra8875_touch.h  stmpe610.h  touch_driver.c  touch_driver.h  tp_spi.h  xpt2046.h
components/lvgl_esp32_drivers/qmsd_device/: qm_knob_drive.h
components/lvgl_esp32_drivers/qmsd_knob/: qm_knob_drive.h
components/lvgl_esp32_drivers/qmsd_touch/: gt1151.h
components/lvgl_esp32_drivers/qmsd_tp/gslx680/: lcd_touch_gslx680.h
components/lvgl_esp32_drivers/qmsd_tp/gt911/: Goodix.h  GoodixFW.h  lcd_touch.h
components/qmsd_api/: CMakeLists.txt  component.mk
components/qmsd_api/include/: qmsd_api.h  qmsd_blufi.h  qmsd_wifi.h
components/qmsd_api/src/: qmsd_base.c  qmsd_blufi.c  qmsd_gpio.c  qmsd_http.c  qmsd_mqtt.c  qmsd_nvs.c  qmsd_ota.c  qmsd_pwm.c  qmsd_sntp.c  qmsd_uart.c  qmsd_wifi.c
components/qmsd_api/src/blufi/: blufi_init.c  blufi_security.c
components/qmsd_audio/: CMakeLists.txt
components/qmsd_audio/codec/: audio_hal.h  zx_es8388.c  zx_es8388.h
components/qmsd_board/: CMakeLists.txt  Kconfig.projbuild
components/qmsd_board/board_utility/: qmsd_board_config.h  qmsd_board_utils.c  qmsd_board_utils.h
components/qmsd_gui/: CMakeLists.txt
components/qmsd_gui/qmsd_gui/: qmsd_gui_config.h  qmsd_top_gui.h
components/qmsd_gui/qmsd_gui/api/: esp_efuse_custom_table.h  qmsd_base_gui_api.h
components/qmsd_gui/qmsd_gui/control/: qmsd_gui_control.h
components/qmsd_gui/qmsd_gui/elements/: qmsd_gui_obj.h  qmsd_gui_objll.h  qmsd_sys.h
components/qmsd_gui/qmsd_gui/tools/: qmsd_storage.h
components/qmsd_gui/qmsd_gui_port/include/: base_widget_api.h  base_widget_type.h  qmsd_gui.h  qmsd_widget_arc.h  qmsd_widget_bar.h  qmsd_widget_button.h  qmsd_widget_calendar.h  qmsd_widget_chart.h  qmsd_widget_checkbox.h  qmsd_widget_clock.h  qmsd_widget_container.h  qmsd_widget_dropdown.h  qmsd_widget_gauge.h  qmsd_widget_image.h  qmsd_widget_label.h  qmsd_widget_led.h  qmsd_widget_line.h  qmsd_widget_list.h  qmsd_widget_menu.h  qmsd_widget_msgbox.h  qmsd_widget_preloader.h  qmsd_widget_roller.h  qmsd_widget_slider.h  qmsd_widget_style.h  qmsd_widget_switch.h  qmsd_widget_tabview.h  qmsd_widget_textarea.h  qmsd_widget_tileview.h  qmsd_widget_timer.h
components/qmsd_init/: CMakeLists.txt  Kconfig  qm_screen_config.h  qmsd_ctrl.c  qmsd_ctrl.h  qmsd_gui.h  qmsd_gui_init.c  qmsd_gui_init.h  qmsd_lang.c  qmsd_lang.h  qmsd_msgque.c  qmsd_msgque.h  qmsd_rgb_init.c  qmsd_rgb_init.h  qmsd_screen_config.h  qmsd_storage.c  qmsd_storage.h  qmsd_ui_storage.c  qmsd_ui_storage.h
components/qmsd_init/qmsd_board/: qmsd_board_init.c  qmsd_board_init.h
components/qmsd_init/qmsd_board/esp32/: WT32_SC01.c
components/qmsd_init/qmsd_board/esp32-c3/: WT154_C3SI1.c  WT240_C3SI1.c  st7789.txt
components/qmsd_init/qmsd_board/esp32-s2/: WT154_S2MI1.c  WT280_S2MX1.c  WT_0_S2_240MW1.c  WT_86_32_3ZW1.c
components/qmsd_mod/: CMakeLists.txt  component.mk  qmsd_avl.c  qmsd_mod.c  qmsd_notifier.c
components/qmsd_mod/include/: encrypt_8ms.h  qmsd_avl.h  qmsd_mod.h  qmsd_mod_internal.h  qmsd_notifier.h
components/qmsd_ui/: CMakeLists.txt  qmsd_lang.csv
components/qmsd_ui/res/: img1639365041009_png.c
components/qmsd_ui/ui/: qmsd_internal_ui_cb.c  qmsd_internal_ui_cb.h  qmsd_ui_entry.c  qmsd_ui_entry.h  screen_main.c
components/screen/: CMakeLists.txt  Kconfig  screen_driver.c  screen_driver.h
components/screen/qmsd_rgb/: qmsd_lcd_common.h  qmsd_lcd_rgb_panel.h
components/touch_panel/: CMakeLists.txt  GoodixStructs.h  Kconfig  cst3xx.h  cst816s.h  cst836u.h  gt1151.h  gt2863.h  gt911.h  icnt8958.h  lcd_touch.h  lcd_touch_gslx680.h
components/touch_panel/button/: CMakeLists.txt  button.h
components/touch_panel/gslx680/: lcd_touch_gslx680.h  touch.h  touch_data.h
components/touch_panel/gslx680n/: gslx680n.h  gslx680n_fw.h
components/touch_panel/hall/: CMakeLists.txt
examples/demo_ble_wifi/main/: CMakeLists.txt  gatts.c  main.c  mqtt.c  mqtt.h  sd.c  sd.h
examples/demo_freetpye/main/: CMakeLists.txt  gatts.c  main.c  ringbuf.c  ringbuf.h
main/: CMakeLists.txt  ali_font_16.c  component.mk  gpio.c  img_define.h  main.c  nvs_partition_gen.py  qm_ui_entry.c  qm_ui_entry.h  qmsd_lang.sh  uart.c
main/control/: qmsd_control.c  qmsd_control.h  qmsd_ui_cb.c
main/init/: qmsd_board_init.c  qmsd_board_init.h
main/test/: test_cmd.c
tools/qmsd_cmake/: CMakeLists.txt
(+743 files in other folders)
